--- a/translations/kangyur/placeholders/093-039_toh724-the_great_practice_manual_of_tara_of_the_upswept_tresses.xml
+++ b/translations/kangyur/placeholders/093-039_toh724-the_great_practice_manual_of_tara_of_the_upswept_tresses.xml
@@ -3,16 +3,20 @@
 <TEI xmlns="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
-            <titleStmt sponsored="full">
-                <title type="mainTitle" xml:lang="Bo-Ltn">ral pa gyen brdzes kyi rtog pa chen po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">āryatārāmūlakalpa</title>
+            <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Great Practice Manual of Tārā of the Upswept Tresses</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">ral pa gyen brdzes kyi rtog pa chen po/ byang chub sems dpa' chen po'i rnam par 'phrul pa le'u rab 'byam las bcom ldan 'das ma 'phags ma sgrol ma'i rtsa ba'i rtog pa zhes bya ba/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">āryatārāmūlakalpa</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">ral pa gyen brdzes kyi rtog pa chen po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">ūrdhvajaṭāmahākalpo mahābodhisattva­vikurvāṇapaṭalavistarād bhagavatyārya­tārāmūlakalpo nāma</title>
+                <title type="otherTitle" xml:lang="zh">《上向髻大儀軌》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">ral pa gyen brdzes kyi rtog pa chen po/ byang chub sems dpa' chen po'i rnam par 'phrul pa le'u rab 'byam las bcom ldan 'das ma 'phags ma sgrol ma'i rtsa ba'i rtog pa zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">lhag par smos pa'i phreng ba/</title>
-                <title type="otherTitle" xml:lang="zh">上向髻大儀軌</title>
-            <sponsor ref="sponsors.xml#sponsor-40">胡作胜先生、王爱莲女士以及胡懿真小姐</sponsor>
+                <sponsor ref="sponsors.xml#sponsor-40">胡作胜先生、王爱莲女士以及胡懿真小姐</sponsor>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date/>
+                </edition>
+            </editionStmt>
             <publicationStmt status="">
                 <idno xml:id="UT22084-093-039"/>
             </publicationStmt>
@@ -20,16 +24,17 @@
                 <bibl key="toh724" type="text">
                     <ref>Toh 724</ref>
                     <biblScope>vol.93, ff.205v-311r(pp.408-621) and vol.94, ff.1r-200r(pp.1-399)</biblScope>
-                    <location count-pages="610">
-                        <start volume="93" page="410"/>
-                        <end volume="94" page="401"/>
+                    <location work="UT4CZ5369" count-pages="610">
+                        <volume number="93" start-page="408" end-page="619"/>
+                        <volume number="94" start-page="2" end-page="399"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12464" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 13/02/2019 at 08:50:43 by admin</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:44:22.436Z" user="admin">26/07/2022 07:44:22</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:44:20.444Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
