--- a/translations/kangyur/placeholders/098-003_toh833-the_magical_net_of_vajrasattva_the_mirror_of_all_secrets.xml
+++ b/translations/kangyur/placeholders/098-003_toh833-the_magical_net_of_vajrasattva_the_mirror_of_all_secrets.xml
@@ -8,12 +8,12 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">vajrasattva­māyājāla­guhyasarvādarśa</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rdo rje sems dpa'i sgyu 'phrul dra ba gsang ba thams cad kyi me long/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">vajrasattva­māyājālaguhya­sarvādarśanāmatantra</title>
+                <title type="otherTitle" xml:lang="zh">《金剛薩埵幻化網一切秘密之鏡》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rje sems dpa'i sgyu 'phrul dra ba gsang ba thams cad kyi me long zhes bya ba'i rgyud/</title>
-                <title type="otherTitle" xml:lang="zh">金剛薩埵幻化網一切秘密之鏡</title>
                 <sponsor ref="sponsors.xml#sponsor-47">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -33,9 +33,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-31T08:19:29.664Z" user="admin">31/03/2022 08:19:29</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="" date-time="2022-03-31T08:19:02.933Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-31T08:19:02.933Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-03-31T08:19:25.873Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:47:52.804Z" user="admin">26/07/2022 07:47:52</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="" date-time="2022-03-31T08:19:02.933Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-31T08:19:02.933Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-03-31T08:19:25.873Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-26T07:47:50.804Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
