--- a/translations/kangyur/placeholders/090-034_toh590,985-the_invincible_spell_of_usnisasitatapatra.xml
+++ b/translations/kangyur/placeholders/090-034_toh590,985-the_invincible_spell_of_usnisasitatapatra.xml
@@ -24,10 +24,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-090-034"/>
                 <date/>
             </publicationStmt>
@@ -52,7 +52,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T11:55:10.821Z" user="admin">15/07/2022 11:55:10</note>
+                <note type="lastUpdated" date-time="2022-08-09T08:07:00.719Z" user="admin">09/08/2022 08:07:00</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:46:40.495Z" user="line-tofte">3</note>
@@ -70,6 +70,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T11:54:15.358Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-15T11:54:15.358Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-15T11:55:02.975Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-08-09T08:06:52.787Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-09T08:06:52.787Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
