--- a/translations/kangyur/placeholders/090-035_toh591-the_incantation_of_the_supremely_accomplished_great_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-035_toh591-the_incantation_of_the_supremely_accomplished_great_sitatapatra_aparajita.xml
@@ -20,10 +20,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-090-035"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T11:57:46.61Z" user="admin">15/07/2022 11:57:46</note>
+                <note type="lastUpdated" date-time="2022-08-09T08:08:27.945Z" user="admin">09/08/2022 08:08:27</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:05.962Z" user="line-tofte">3</note>
@@ -57,6 +57,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T11:56:55.257Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-15T11:56:55.257Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-15T11:57:38.775Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-08-09T08:08:19.989Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-09T08:08:19.989Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
