--- a/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
@@ -11,16 +11,17 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">tathāgatācintyaguhyanirdeśa</title>
                 <title type="otherTitle" xml:lang="zh">《如來不可思議秘密經》（大正藏：《大寶積經密迹金剛力士會第三》）</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i gsang ba bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="contributors.xml#team-9">Dharmachakra Translation Committee</author>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima Rinpoche</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-75">Timothy Hinkle</author>
-                <author role="translatorEng" ref="contributors.xml#person-50">Andreas Doctor</author>
-                <consultant role="advisor" ref="contributors.xml#person-116">Dr. Ulrich Pagel</consultant>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <author role="translatorMain" ref="eft:team-9">Dharmachakra Translation Committee</author>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
+                <author role="translatorEng" ref="eft:person-75">Timothy Hinkle</author>
+                <author role="translatorEng" ref="eft:person-50">Andreas Doctor</author>
+                <consultant role="advisor" ref="eft:person-116">Dr. Ulrich Pagel</consultant>
+                <consultant role="projectManager" ref="eft:person-50">Dr. Andreas Doctor</consultant>
+                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
                 <sponsor ref="sponsors.xml#sponsor-7">Leo Tong Chen and his family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,12 +41,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-09T09:02:57.411Z" user="admin">09/08/2022 09:02:57</note>
+                <note type="lastUpdated" date-time="2022-08-09T09:03:41.056Z" user="admin">09/08/2022 09:03:41</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:19.044Z" user="mike">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T15:57:01.899Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-08-09T09:02:49.463Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-09T09:02:49.463Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-09T09:03:33.081Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
