--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -6,22 +6,26 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rgyal mtshan rtse mo'i dpung rgyan gyi gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">dhvajāgrakeyūradhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation, The Arm Bracelet Atop the Standard</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī, The Arm Bracelet Atop the Standard</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal mtshan gyi rtse mo'i dpung rgyan ces bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadhvajāgrakeyūranāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal mtshan gyi rtse mo'i dpung rgyan ces bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadhvajāgrakeyūranāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-091-009"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh612" type="text">
                     <ref>Toh 612</ref>
                     <biblScope>vol.91, ff.45v-46v(pp.90-92)</biblScope>
-                    <location count-pages="3">
-                        <start volume="91" page="92"/>
-                        <end volume="91" page="94"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="91" start-page="90" end-page="92"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12346" work="W22084"/>
@@ -29,16 +33,15 @@
                 <bibl key="toh923" type="text">
                     <ref>Toh 923</ref>
                     <biblScope>vol.100, ff.267r-268v(pp.533-536)</biblScope>
-                    <location count-pages="4">
-                        <start volume="100" page="535"/>
-                        <end volume="100" page="538"/>
+                    <location work="UT4CZ5369" count-pages="4">
+                        <volume number="100" start-page="533" end-page="536"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12685" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:05 by admin</note>
+                <note type="lastUpdated" date-time="2022-08-23T14:23:09.813Z" user="admin">23/08/2022 14:23:09</note>    <note type="updated" update="translation-status" value="4" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-08-23T14:23:03.606Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
