--- a/translations/kangyur/placeholders/037-001_toh44-39-chapter_39_the_teaching_on_the_inconceivability_of_the_buddhadharma.xml
+++ b/translations/kangyur/placeholders/037-001_toh44-39-chapter_39_the_teaching_on_the_inconceivability_of_the_buddhadharma.xml
@@ -11,11 +11,11 @@
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-037-001"/>
                 <date/>
             </publicationStmt>
@@ -31,12 +31,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T15:53:37.777Z" user="admin">29/06/2022 15:53:37</note>
+                <note type="lastUpdated" date-time="2022-08-25T10:47:27.975Z" user="admin">25/08/2022 10:47:27</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T18:28:00.74Z" user="john"/>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-17T02:19:46.003Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-11T05:18:58.546Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-29T15:53:35.789Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:47:21.759Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-25T10:47:21.759Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
