--- a/translations/kangyur/placeholders/061-007_toh187-the_teaching_on_the_inconceivable_properties_of_the_buddhas.xml
+++ b/translations/kangyur/placeholders/061-007_toh187-the_teaching_on_the_inconceivable_properties_of_the_buddhas.xml
@@ -4,15 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi chos kyi bsam gyis mi khyab pa bstan pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">buddhadharmācintyanirdeśa</title>
                 <title type="mainTitle" xml:lang="en">The Teaching on the Inconceivable Properties of the Buddhas</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi chos kyi bsam gyis mi khyab pa bstan pa</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">buddhadharmācintyanirdeśa</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi chos kyi bsam gyis mi khyab pa bstan pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabuddhadharmācintyanirdeśa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">[Note: according to the dkar chag, this text is "known to be an extract of the 29th chapter of the Avataṃsaka." This should read the 39th chapter, which has the same title and appears to be close but not identical.]</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi chos kyi bsam gyis mi khyab pa bstan pa</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -32,9 +34,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-25T10:49:31.189Z" user="admin">25/08/2022 10:49:31</note>
+                <note type="lastUpdated" date-time="2022-08-25T10:50:27.213Z" user="admin">25/08/2022 10:50:27</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T18:26:48.204Z" user="john"/>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:49:24.96Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-25T10:49:24.96Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:49:24.96Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-25T10:49:24.96Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-25T10:50:18.911Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
