--- a/translations/kangyur/placeholders/046-004_toh98,721-the_sutra_teaching_the_array_of_the_buddhafields.xml
+++ b/translations/kangyur/placeholders/046-004_toh98,721-the_sutra_teaching_the_array_of_the_buddhafields.xml
@@ -14,16 +14,20 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa thams cad kyi byin gyi rlabs sems can la gzigs shing sangs rgyas kyi zhing gi bkod pa kun tu ston pa zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarvatathāgatādhiṣṭhāna­sattvāvalokena buddhakṣetra­nirdeśanavyūha­nāmamahāyānasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-046-004"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh98" type="text">
                     <ref>Toh 98</ref>
                     <biblScope>vol:46, ff.258r-278r(pp.215-555)</biblScope>
-                    <location count-pages="41">
-                        <start volume="46" page="517"/>
-                        <end volume="46" page="557"/>
+                    <location work="UT4CZ5369" count-pages="41">
+                        <volume number="46" start-page="515" end-page="555"/>
                     </location>
                     <idno parent-id="O1JC114941JC14668" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11651" work="W22084"/>
@@ -31,16 +35,15 @@
                 <bibl key="toh721" type="text">
                     <ref>Toh 721</ref>
                     <biblScope>vol.93, ff.180v-199v(pp.360-398)</biblScope>
-                    <location count-pages="39">
-                        <start volume="93" page="362"/>
-                        <end volume="93" page="400"/>
+                    <location work="UT4CZ5369" count-pages="39">
+                        <volume number="93" start-page="360" end-page="398"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12461" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:30:50 by admin</note>
+                <note type="lastUpdated" date-time="2022-08-25T10:53:38.934Z" user="admin">25/08/2022 10:53:38</note>    <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:53:31.592Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-08-25T10:53:31.592Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
