--- a/translations/kangyur/placeholders/057-005_toh146-the_sutra_teaching_the_miracles_in_the_domain_of_skillful_means_that_the_bodhisattvas_have_at_their_disposition.xml
+++ b/translations/kangyur/placeholders/057-005_toh146-the_sutra_teaching_the_miracles_in_the_domain_of_skillful_means_that_the_bodhisattvas_have_at_their_disposition.xml
@@ -10,11 +10,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">satyakaparivarta</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabodhisattva­gocaropāyaviṣayavikurvita­nirdeśanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bden pa po'i le'u zhes bya ba'i chos kyi rnam grangs</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">bden pa po'i le'u</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa'i spyod yul thabs kyi yul la rnam par 'phrul pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">bden pa po'i le'u</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-338">Ana Cristina Lopes</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -33,11 +35,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-25T10:55:05.96Z" user="admin">25/08/2022 10:55:05</note>
+                <note type="lastUpdated" date-time="2022-08-25T10:57:28.76Z" user="admin">25/08/2022 10:57:28</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-09-01T09:43:18.064Z" user="john">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-16T15:04:56.733Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-08-25T10:54:59.733Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-25T10:54:59.733Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-25T10:57:20.609Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
