--- a/translations/kangyur/placeholders/090-003_toh559-the_great_peahen_queen_of_incantations.xml
+++ b/translations/kangyur/placeholders/090-003_toh559-the_great_peahen_queen_of_incantations.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">rig sngags kyi rgyal mo rma bya chen mo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāmāyūrīvidyārājñī</title>
                 <title type="otherTitle" xml:lang="zh">《明咒王大孔雀妃》（大正藏：《佛母大金曜孔雀明王經》）</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <editor role="copyEditor" ref="contributors.xml#person-273">Janna White</editor>
-                <editor role="externalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
-                <author role="translatorEng" ref="contributors.xml#person-51">James Duncan Gentry</author>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Andreas Doctor</consultant>
-                <editor role="projectEditor" ref="contributors.xml#person-74">Ryan Damron</editor>
-                <editor role="reviser" ref="contributors.xml#person-50">Andreas Doctor</editor>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima Rinpoche</consultant>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <editor role="copyEditor" ref="eft:person-273">Janna White</editor>
+                <editor role="externalReviewer" ref="eft:person-74">Ryan Damron</editor>
+                <author role="translatorEng" ref="eft:person-51">James Duncan Gentry</author>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,11 +40,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-09T15:11:23.325Z" user="admin">09/06/2022 15:11:23</note>
+                <note type="lastUpdated" date-time="2022-08-25T13:18:00.536Z" user="admin">25/08/2022 13:18:00</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:22:43.995Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-08T10:19:35.998Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-07-08T10:26:54.911Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-25T13:17:58.367Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
