--- a/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
+++ b/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
@@ -19,10 +19,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2021</date>
+                <edition>v 0.0.13 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-090-045"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-24T12:39:51.13Z" user="admin">24/08/2022 12:39:51</note>
+                <note type="lastUpdated" date-time="2022-08-30T08:25:57.851Z" user="admin">30/08/2022 08:25:57</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">3</note>
@@ -67,6 +67,8 @@
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-07-11T09:18:31.17Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-11T09:18:31.17Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-24T12:39:43.008Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2022-08-30T08:25:49.737Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2022-08-30T08:25:49.737Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
